adding new file and modifying the code

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Html document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--The heading tag which is used to add the adding-->
+    <h1>This is the h1 heading tag to add the adding in the web</h1>
+    <h2>This is the h2 heading tag to add the adding in the web</h2>
+    <h3>This is the h3 heading tag to add the adding in the web</h3>
+    <h4>This is the h4 heading tag to add the adding in the web</h4>
+    <h5>This is the h5 heading tag to add the adding in the web</h5>
+    <h6>This is the h6 heading tag to add the adding in the web</h6>
+    <br>
+    <!--Paragraph tag is used to add a paragraph-->
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, ex omnis quam accusamus libero necessitatibus labore aspernatur voluptatum repellendus nostrum, explicabo blanditiis voluptates magni pariatur inventore laboriosam eligendi nemo quaerat?</p>
+    <!-- attribute is used to anhance the functionality of the tag-->
+
+    <!-- anchar tag is used to add the links in the website-->
+     <a href="https://www.google.com">Open Google</a>
+     <br>
+     <!-- There are two types of link  one is absolute  which contains the other website links and relative contains the links which are present in the same or different folders -->
+
+     <a target="_blank" href="https://www.facebook.com">Open facebook</a>
+     <br>
+     <a target="_blank" href="/Bookmark.html">Open Bookmark</a>
+
+
     
+    <script src="script.js"></script>
 </body>
 </html>
