--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
       content="This is the page contains the complete Information about the HTML"
     />
     <title>Html document</title>
+    <style>
+      p{
+        background-color: green;
+        color: aqua;
+      }
+    </style>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--The heading tag which is used to add the adding-->
     <h1>This is the h1 heading tag to add the adding in the web</h1>
-    <h2>This is the h2 heading tag to add the adding in the web</h2>
+    <h2 style="background-color: yellow; color: red;">This is the h2 heading tag to add the adding in the web</h2>
     <h3>This is the h3 heading tag to add the adding in the web</h3>
     <h4>This is the h4 heading tag to add the adding in the web</h4>
     <h5>This is the h5 heading tag to add the adding in the web</h5>
@@ -198,6 +204,8 @@
       </div>
       <hr />
     </form>
+
+    <hr>
     <!-- inline and block element -->
 
     <p id="block1">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -259,6 +267,8 @@
       ></iframe>
     </div>
 
+    <hr>
+
     <!-- semantic tags are used to make our html file even more formate so that the SEO can even hunderstand better  -->
 
     <!-- some semantic tags are - header, main (section , aside , article) , footer -->
@@ -278,11 +288,15 @@
     </main>
     <footer>copy write content : &nbsp; &copy;</footer>
 
+    <hr>
+
     <!-- HTML entities are the used to represent the spacial character  -->
 
     &lt;p&gt; &lt;/p&gt;
 
     <p>copy right symbols : &nbsp; &nbsp; &copy;</p>
+
+    <hr>
 
     <!-- HTML code tag -->
 
