--- a/exercise.html
+++ b/exercise.html
@@ -9,8 +9,8 @@
             color: red;
             background-color: yellow;
         }
-
-        .para{
+        /* div p:first-child */
+        div>p:nth-child(1){
             color: blue;
             background-color: aqua;
         }
@@ -20,10 +20,10 @@
 <body>
     <div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi, molestiae ipsa atque neque sint eveniet, ab modi exercitationem quas aliquam odio libero dicta dolorem sunt quo eaque veritatis cupiditate!</p>
-        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi, molestiae ipsa atque neque sint eveniet, ab modi exercitationem quas aliquam odio libero dicta dolorem sunt quo eaque veritatis cupiditate!</p>
-        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi, molestiae ipsa atque neque sint eveniet, ab modi exercitationem quas aliquam odio libero dicta dolorem sunt quo eaque veritatis cupiditate!</p>
-        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi, molestiae ipsa atque neque sint eveniet, ab modi exercitationem quas aliquam odio libero dicta dolorem sunt quo eaque veritatis cupiditate!</p>
-        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi, molestiae ipsa atque neque sint eveniet, ab modi exercitationem quas aliquam odio libero dicta dolorem sunt quo eaque veritatis cupiditate!</p>
+        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi, molestiae ipsa atque neque sint eveniet, ab modi exercitationem quas aliquam odio libero dicta dolorem sunt quo eaque veritatis cupiditate!</p>
+        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi, molestiae ipsa atque neque sint eveniet, ab modi exercitationem quas aliquam odio libero dicta dolorem sunt quo eaque veritatis cupiditate!</p>
+        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi, molestiae ipsa atque neque sint eveniet, ab modi exercitationem quas aliquam odio libero dicta dolorem sunt quo eaque veritatis cupiditate!</p>
+        <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quasi, molestiae ipsa atque neque sint eveniet, ab modi exercitationem quas aliquam odio libero dicta dolorem sunt quo eaque veritatis cupiditate!</p>
 
     </div>
 </body>
